--- a/_config.yml
+++ b/_config.yml
@@ -13,14 +13,14 @@ hackweek: "icesat-2hackweek"
 year: "2019"
 
 # Overall title for pages.
-title: "Data Access"
+title: "Gridding"
 
 # Repository URL (without trailing slash).
-repo: https://github.com/icesat-2hackweek/data-access
+repo: https://github.com/icesat-2hackweek/gridding
 
 # Root URL below username.github.io domain, with leading slash but no trailing slash.
 # For example, for 'https://geohackweek.github.io/lesson-example', use '/lesson-example'.
-root: "/data-access"
+root: "/gridding"
 
 # Contact email address.
 email: arendta@uw.edu
